--- a/web2/index.html
+++ b/web2/index.html
@@ -12,6 +12,6 @@
     <script src="scripts/Projector.js"></script>
   </head>
   <body>
-    <script src="scripts/spiral.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
