--- a/web/index.html
+++ b/web/index.html
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="An interactive audio visualizer." />
-    <link rel="apple-touch-icon" href="/logo180.png" />
-    <link rel="manifest" href="/manifest.json" />
-
-    <title>Interactive Audio Visualizer</title>
+    <title>Peach</title>
   </head>
 
   <body>
