--- a/web3/index.html
+++ b/web3/index.html
@@ -13,6 +13,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Peach</title>
   </head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-QT1H5P5W4Y"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-QT1H5P5W4Y');
+</script>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
